# AI-DOCTOR

./: README.md  app.py  brain_of_the_doctor.py  main.py  pyproject.toml  requirements.txt  voice_of_the_doctor.py  voice_of_the_patient.py
